Make input colour readable and use console.log to workaround login timing issue

--- a/style.css
+++ b/style.css
@@ -31,3 +31,7 @@ label {
   text-shadow: none;
   color: red;
 }
+
+input {
+  color: black;
+}
